add s in foodsiwanttotry.html

--- a/foodsiwanttotry.html
+++ b/foodsiwanttotry.html
@@ -29,7 +29,7 @@
         <div class="foods">
             <div>
             <img class="image" src="pancakes.jpg">
-            <p class="title">Japanese Souffle Pancake</p>
+            <p class="title">Japanese Souffle Pancakes</p>
             <pr class="description"> Also known as 'fuwa fuwa' (meaning fluffy fluffy in Japanese) pancakes, this Japanese souffle pancake recipe creates the jiggliest, dreamiest pancakes. I haven't got the chance to buy this because it's a bit too pricey.
             </pr>
             </div>
