--- a/favfood.html
+++ b/favfood.html
@@ -26,7 +26,7 @@
         
         </header>
         <div class="foodheader">
-                <h3>FAVORITE FOODS</h3>
+                <h3>FAV FOODS</h3>
         </div>
         <div class="foods">
             <div>
